Agregado de bitmap
Agregamos el bitMap memory manager, con una configuracion para que corra dependiendo los flags

Co-Authored-By: Santiago Nogueira <147627792+snogueira1@users.noreply.github.com>
Co-Authored-By: Manuel Araujo Feltrin <152537869+maraujofeltrin@users.noreply.github.com>

--- a/Kernel/Makefile
+++ b/Kernel/Makefile
@@ -7,6 +7,13 @@ OBJECTS=$(SOURCES:.c=.o)
 OBJECTS_ASM=$(SOURCES_ASM:.asm=.o)
 LOADERSRC=loader.asm
 
+TEST_CFLAGS = 
+
+ifeq ($(TEST), mm)
+    TEST_CFLAGS += -DTEST_MM
+   
+endif
+
 LOADEROBJECT=$(LOADERSRC:.asm=.o)
 STATICLIBS=
 
@@ -17,7 +24,7 @@ $(KERNEL): $(LOADEROBJECT) $(OBJECTS) $(STATICLIBS) $(OBJECTS_ASM)
 	$(LD) $(LDFLAGS) -T kernel.ld --oformat=elf64-x86-64 -o kernel.elf $(LOADEROBJECT) $(OBJECTS) $(OBJECTS_ASM) $(STATICLIBS)
 
 %.o: %.c
-	$(GCC) $(GCCFLAGS) -I./include -c $< -o $@
+	$(GCC) $(GCCFLAGS) $(TEST_CFLAGS) -I./include -c $< -o $@
 
 %.o : %.asm
 	$(ASM) $(ASMFLAGS) $< -o $@
