avances en el scheduling
Co-Authored-By: Santiago Nogueira <147627792+snogueira1@users.noreply.github.com>
Co-Authored-By: santinopepe <146956051+santinopepe@users.noreply.github.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
     "string.h": "c",
     "memoryinfo.h": "c",
     "stdint.h": "c",
-    "process.h": "c"
+    "process.h": "c",
+    "doublelinkedlistadt.h": "c"
   }
 }
