Implementacion del keyboard y shared
Se modificó el makefile para q tome en cuenta el shared y se hizo el keyboard

--- a/Kernel/Makefile
+++ b/Kernel/Makefile
@@ -6,9 +6,11 @@ KERNEL=kernel.bin
 # Los archivos de memory/ los añadiremos condicionalmente después
 SOURCES=$(filter-out memory/bitMap.c memory/buddy.c, $(wildcard *.c drivers/*.c interruptions/*.c lib/*.c memory/*.c pipes/*.c processes/*.c scheduler/*.c semaphores/*.c syscalls/*.c ))
 SOURCES_ASM=$(wildcard asm/*.asm semaphores/*.asm)
+SOURCES_SHARED=$(wildcard ../Shared/*.c)
 
 OBJECTS=$(SOURCES:.c=.o)
 OBJECTS_ASM=$(SOURCES_ASM:.asm=.o)
+OBJECTS_SHARED=$(SOURCES_SHARED:.c=.o)
 LOADERSRC=loader.asm
 
 TEST_CFLAGS =
@@ -43,12 +45,12 @@ STATICLIBS=
 
 all: $(KERNEL)
 
-$(KERNEL):	$(LOADEROBJECT)	$(OBJECTS)	$(STATICLIBS)	$(OBJECTS_ASM)
-	$(LD)	$(LDFLAGS) -T kernel.ld -o	$(KERNEL)	$(LOADEROBJECT)	$(OBJECTS)	$(OBJECTS_ASM)	$(STATICLIBS)
-	$(LD) $(LDFLAGS) -T kernel.ld --oformat=elf64-x86-64 -o kernel.elf $(LOADEROBJECT) $(OBJECTS) $(OBJECTS_ASM) $(STATICLIBS)
+$(KERNEL):	$(LOADEROBJECT)	$(OBJECTS)	$(STATICLIBS)	$(OBJECTS_ASM) $(OBJECTS_SHARED)
+	$(LD)	$(LDFLAGS) -T kernel.ld -o	$(KERNEL)	$(LOADEROBJECT)	$(OBJECTS)	$(OBJECTS_ASM)	$(STATICLIBS) $(OBJECTS_SHARED)
+	$(LD) $(LDFLAGS) -T kernel.ld --oformat=elf64-x86-64 -o kernel.elf $(LOADEROBJECT) $(OBJECTS) $(OBJECTS_ASM) $(STATICLIBS) $(OBJECTS_SHARED)
 
 %.o: %.c
-	$(GCC) $(GCCFLAGS) $(TEST_CFLAGS) -I./include -c $< -o $@
+	$(GCC) $(GCCFLAGS) $(TEST_CFLAGS) -I./include -I../Shared/include -c $< -o $@
 
 %.o : %.asm
 	$(ASM) $(ASMFLAGS) $< -o $@
