arreglos de compilacion
Co-Authored-By: santinopepe <146956051+santinopepe@users.noreply.github.com>
Co-Authored-By: Santiago Nogueira <147627792+snogueira1@users.noreply.github.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,8 @@
     "memoryinfo.h": "c",
     "stdint.h": "c",
     "process.h": "c",
-    "doublelinkedlistadt.h": "c"
+    "doublelinkedlistadt.h": "c",
+    "syscalls.h": "c",
+    "globals.h": "c"
   }
 }
