--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,13 @@
     "process.h": "c",
     "doublelinkedlistadt.h": "c",
     "syscalls.h": "c",
-    "globals.h": "c"
+    "globals.h": "c",
+    "video.h": "c",
+    "lib.h": "c",
+    "memorymanager.h": "c",
+    "cmdparseradt.h": "c",
+    "tron.h": "c",
+    "stdio.h": "c",
+    "stdlib.h": "c"
   }
 }
