andas pipes mas o menos
Co-Authored-By: Manuel Araujo Feltrin <152537869+maraujofeltrin@users.noreply.github.com>
Co-Authored-By: Santiago Nogueira <147627792+snogueira1@users.noreply.github.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,10 @@
     "cmdparseradt.h": "c",
     "tron.h": "c",
     "stdio.h": "c",
-    "stdlib.h": "c"
+    "stdlib.h": "c",
+    "ostream": "c",
+    "scheduler.h": "c",
+    "semaphoresmanager.h": "c",
+    "time.h": "c"
   }
 }
